menu overflow fixed

--- a/app/stylus/blocks/menu.styl
+++ b/app/stylus/blocks/menu.styl
@@ -39,6 +39,7 @@ li()
     margin 0
     position relative
     border-bottom 1px solid lightness($green-dark-color, 40%)
+    hyphens()
 
     @media (min-width 480px)
         display inline-block
@@ -91,6 +92,7 @@ a()
     &__btn
         width 100%
         background-color $green-dark-color
+        color white
         width 100%
         text-align left
         position relative
@@ -98,6 +100,7 @@ a()
         user-select none
         padding-left 45px
         border none
+        ellipsis()
 
         @media (min-width 480px)
             display none
@@ -133,7 +136,6 @@ a()
             bottom 8px
 
     &__title
-        color white
         line-height 40px
         text-transform uppercase
         font-size 18px
